--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,12 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 Mako==1.1.6
 MarkupSafe==2.0.1
+numpy==1.21.4
+pandas==1.3.4
 psycopg2==2.9.2
+python-dateutil==2.8.2
 python-dotenv==0.19.2
+pytz==2021.3
+six==1.16.0
 SQLAlchemy==1.4.27
 Werkzeug==2.0.2
